--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@ h1 {
     font-size: 3.25rem;
     line-height: 4.375rem;
     color: #3A3A3A;
+    margin: 0;
+    margin-bottom: 1rem;
 }
 
 .secondary-header {
@@ -51,6 +53,7 @@ a {
     font-size: 1rem;
     line-height: 1.75rem;
     color: #6C6C6C;
+    margin-bottom: 1rem;
 }
 
 a {
@@ -70,11 +73,15 @@ a {
     justify-content: center;
 }
 
+img {
+    width: 100%;
+}
+
 /*-------------------------------------------
     Header Section 
 --------------------------------------------*/
 .header {
-    height: 170px;
+    height: 140px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -116,4 +123,65 @@ a {
     border: 0px solid;
     background: none;
     display: none;
+}
+
+/*-------------------------------------------
+    Banner Section 
+--------------------------------------------*/
+.banner {
+    display: flex;
+    align-items: center;
+}
+
+.banner-content {
+    width: 50%;
+
+}
+
+.banner-image {
+    width: 50%;
+    text-align: center;
+    background-image: url(../images/camra-bg.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    padding: 30px 0;
+}
+
+.banner-image img {
+    width: 440px;
+    height: 414px;
+    transition: transform 300ms ease-in-out;
+}
+
+.banner-image img:hover {
+    transform: scale(1.1);
+}
+
+.btn-rounded {
+    color: #ffffff;
+    background: #E02C6D;
+    border-radius: 41px;
+    font-size: 1rem;
+    padding: 10px 20px;
+    transition: all 300ms ease-in-out;
+}
+
+.btn-rounded:hover {
+    background-color: #3A3A3A;
+}
+
+.partners {
+    display: grid;
+    display: flex;
+    height: 110px;
+    border-top: 1px solid #AAAAAA;
+    border-bottom: 1px solid #AAAAAA;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 54px 0;
+    margin: 100px 0;
+}
+
+.partners a {
+    margin: 0
 }
