--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,16 @@ img {
     display: none;
 }
 
+.cart {
+    display: none;
+
+}
+
+.cart a,
+.menu_bar i {
+    font-size: 2rem;
+}
+
 /*-------------------------------------------
     Banner Section 
 --------------------------------------------*/
@@ -321,4 +331,52 @@ footer {
 .footer-nav li a {
     color: #D9DBE1;
     margin-right: 10px;
+}
+
+/*-------------------------------
+    Rsponsive Design 
+----------------------------------*/
+@media screen and (max-width: 576px) {
+    .container {
+        width: 96%;
+    }
+
+    .menu_bar {
+        display: block;
+    }
+
+    .header {
+        height: 80px;
+    }
+
+    .cart {
+        display: block;
+    }
+
+    nav {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        left: -800px;
+        top: 80px;
+        background-color: rgba(0, 0, 0, 1);
+        padding: 20px 0;
+        transition: left 300ms ease-in-out;
+    }
+
+    .mobile-menu nav {
+        left: 0;
+    }
+
+    .nav {
+
+        flex-direction: column;
+    }
+
+    .nav li a {
+        display: block;
+        color: #ffffff;
+        margin-bottom: 10px;
+    }
+
 }
