--- a/css/style.css
+++ b/css/style.css
@@ -379,4 +379,78 @@ footer {
         margin-bottom: 10px;
     }
 
+    .banner {
+        flex-direction: column-reverse;
+    }
+
+    .banner-image {
+        width: 100%;
+        padding: 35px 0;
+    }
+
+    .banner-image img {
+        width: 257px;
+        height: 257px;
+    }
+
+    .banner-content {
+        width: 100%;
+        text-align: center;
+    }
+
+    .banner-content h1 {
+        font-size: 1.75rem;
+        line-height: 2.625rem;
+    }
+
+    .partners {
+        display: flex;
+        flex-wrap: wrap;
+        max-height: inherit;
+        padding: 20px 0;
+    }
+
+    .collections {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .pagination {
+        margin-top: 32px;
+        margin-bottom: 50px;
+    }
+
+    .features {
+        flex-direction: column-reverse;
+    }
+
+    .feature-info {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    .feature-info h2 {
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+
+    .feature-image {
+        width: 100%;
+        margin-right: 0;
+    }
+
+    .feature-image img {
+        width: 100%;
+    }
+
+    footer {
+        margin-top: 50px;
+    }
+
+    .footer {
+        margin-bottom: 100px;
+    }
+
+
 }
